Prevent starting timer at 00:00, add sounds for timer start and end

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -11,6 +11,6 @@ invalid-minutes: "Ungültige Minutenanzahl!"
 no-permission: "Du hast keine Berechtigung dafür!"
 timer-not-set-message: "Timer nicht gesetzt!"
 timer-already-running: "Timer läuft bereits!"
-timer-not-running: "Timer läuft nicht!"
+timer-expired: "Timer ist abgelaufen! Setze neue Zeit mit /challenge setcountdown <minuten>."
 usage-timer: "Usage: /timer <start|stop|set|resume> [minutes]"
 usage-timer-set: "Usage: /timer set <minutes>"
