Make 'Assigned Items' and 'Player Points' titles configurable in messages.yml

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -14,3 +14,7 @@ timer-already-running: "Timer läuft bereits!"
 timer-expired: "Timer ist abgelaufen! Setze neue Zeit mit /challenge setcountdown <minuten>."
 usage-timer: "Usage: /timer <start|stop|set|resume> [minutes]"
 usage-timer-set: "Usage: /timer set <minutes>"
+assigned-items-title: "=== Assigned Items ==="
+player-points-title: "=== Player Points ==="
+no-items-assigned: "Keine Items zugewiesen."
+no-points-earned: "Keine Punkte erzielt."
