Add item found sound and make all color codes configurable in messages.yml

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -18,3 +18,14 @@ assigned-items-title: "=== Assigned Items ==="
 player-points-title: "=== Player Points ==="
 no-items-assigned: "Keine Items zugewiesen."
 no-points-earned: "Keine Punkte erzielt."
+leaderboard-title: "=== Challenge Ergebnisse ==="
+leaderboard-entry: "#%rank% %player% - %points% Punkte"
+list-item-entry: "%player% - %item%"
+list-points-entry: "%player% - %points% Punkte"
+# Color codes
+color-title: "§6§l"
+color-separator: "§6§l==================="
+color-player: "§f"
+color-separator-small: "§7- §a"
+color-rank: "§e"
+color-no-data: "§7"
