Rename plugin to FoliaChallenges and change /challenge command to /challenges

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -11,7 +11,7 @@ invalid-minutes: "Ungültige Minutenanzahl!"
 no-permission: "Du hast keine Berechtigung dafür!"
 timer-not-set-message: "Timer nicht gesetzt!"
 timer-already-running: "Timer läuft bereits!"
-timer-expired: "Timer ist abgelaufen! Setze neue Zeit mit /challenge setcountdown <minuten>."
+timer-expired: "Timer ist abgelaufen! Setze neue Zeit mit /challenges setcountdown <minuten>."
 usage-timer: "Usage: /timer <start|stop|set|resume> [minutes]"
 usage-timer-set: "Usage: /timer set <minutes>"
 assigned-items-title: "=== Assigned Items ==="
