Make ALL text messages configurable in messages.yml: usage messages, bossbar titles, points suffix

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -1,4 +1,4 @@
-# FoliaChallenge Messages
+# FoliaChallenges Messages
 timer-not-set: "• Zeit wurde nicht gesetzt •"
 timer-display: "• Zeit: %time% •"
 timer-paused-title: "STOP"
@@ -11,9 +11,13 @@ invalid-minutes: "Ungültige Minutenanzahl!"
 no-permission: "Du hast keine Berechtigung dafür!"
 timer-not-set-message: "Timer nicht gesetzt!"
 timer-already-running: "Timer läuft bereits!"
+timer-not-running: "Timer läuft nicht!"
 timer-expired: "Timer ist abgelaufen! Setze neue Zeit mit /challenges setcountdown <minuten>."
 usage-timer: "Usage: /timer <start|stop|set|resume> [minutes]"
 usage-timer-set: "Usage: /timer set <minutes>"
+usage-challenges: "Usage: /challenges <start|stop|setcountdown|resume|randomitembattle> [minutes]"
+usage-challenges-set: "Usage: /challenges setcountdown <minutes>"
+usage-randomitembattle: "Usage: /%command% randomitembattle <listitems|listpoints>"
 assigned-items-title: "=== Assigned Items ==="
 player-points-title: "=== Player Points ==="
 no-items-assigned: "Keine Items zugewiesen."
@@ -22,6 +26,10 @@ leaderboard-title: "=== Challenge Ergebnisse ==="
 leaderboard-entry: "#%rank% %player% - %points% Punkte"
 list-item-entry: "%player% - %item%"
 list-points-entry: "%player% - %points% Punkte"
+points-suffix: "Punkte"
+bossbar-item: "Aktuelles Item: %item%"
+bossbar-paused: "Timer pausiert"
+bossbar-default: "Aktuelles Item: -"
 # Color codes
 color-title: "§6§l"
 color-separator: "§6§l==================="
