Add /challenge randomitembattle blockitem command with Discord webhook announcement

--- a/app/src/main/resources/config.yml
+++ b/app/src/main/resources/config.yml
@@ -1,3 +1,5 @@
-# FoliaChallenge Configuration
+# FoliaChallenges Configuration
 # Whether players can move when the timer is not started
 allow-movement-without-timer: false
+# Whether to announce blacklisted items via Discord webhook
+announce-blacklisted-items: false
