--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -17,7 +17,7 @@ usage-timer: "Usage: /timer <start|stop|set|resume> [minutes]"
 usage-timer-set: "Usage: /timer set <minutes>"
 usage-challenges: "Usage: /challenges <start|stop|setcountdown|resume|randomitembattle> [minutes]"
 usage-challenges-set: "Usage: /challenges setcountdown <minutes>"
-usage-randomitembattle: "Usage: /%command% randomitembattle <listitems|listpoints>"
+usage-randomitembattle: "Usage: /%command% randomitembattle <listitems|listpoints|blockitem>"
 assigned-items-title: "=== Assigned Items ==="
 player-points-title: "=== Player Points ==="
 no-items-assigned: "Keine Items zugewiesen."
