Fix ActionBar colors: make timer colors configurable and prevent color bleed to dots

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -37,3 +37,5 @@ color-player: "§f"
 color-separator-small: "§7- §a"
 color-rank: "§e"
 color-no-data: "§7"
+color-timer-running: "§a"
+color-timer-paused: "§c"
