Add global timer start message, personal item found message, and yellow ActionBar for unset timer

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -4,6 +4,8 @@ timer-display: "• Zeit: %time% •"
 timer-paused-title: "STOP"
 timer-paused-subtitle: "Der Timer ist pausiert!"
 timer-started: "Timer gestartet!"
+timer-started-global: "§aDer Challenge-Timer wurde gestartet!"
+item-found: "§aDu hast dein Item gefunden! Neues Item zugewiesen."
 timer-stopped: "Timer gestoppt!"
 timer-resumed: "Timer fortgesetzt!"
 timer-set: "Timer auf %minutes% Minuten gesetzt!"
@@ -39,3 +41,4 @@ color-rank: "§e"
 color-no-data: "§7"
 color-timer-running: "§a"
 color-timer-paused: "§c"
+color-timer-not-set: "§e"
