--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -6,6 +6,7 @@ timer-paused-subtitle: "Der Timer ist pausiert!"
 timer-started: "Timer gestartet!"
 timer-started-global: "§aDer Challenge-Timer wurde gestartet!"
 item-found: "§aDu hast dein Item gefunden! Neues Item zugewiesen."
+item-blacklisted-reassigned: "§eDas Item %item% wurde geblacklistet. Du hast ein neues Item zugewiesen bekommen!"
 timer-stopped: "Timer gestoppt!"
 timer-resumed: "Timer fortgesetzt!"
 timer-set: "Timer auf %minutes% Minuten gesetzt!"
