Remove timer subcommands from /challenges
- /challenges now only exposes randomitembattle and its subcommands
- Removed handling and suggestions for start/stop/setcountdown/resume under /challenges
- Updated usage message in messages.yml

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -18,8 +18,8 @@ timer-not-running: "Timer läuft nicht!"
 timer-expired: "Timer ist abgelaufen! Setze neue Zeit mit /challenges setcountdown <minuten>."
 usage-timer: "Usage: /timer <start|stop|set|resume> [minutes]"
 usage-timer-set: "Usage: /timer set <minutes>"
-usage-challenges: "Usage: /challenges <start|stop|setcountdown|resume|randomitembattle> [minutes]"
-usage-challenges-set: "Usage: /challenges setcountdown <minutes>"
+usage-challenges: "Usage: /challenges randomitembattle <listitems|listpoints|blockitem>"
+usage-challenges-set: "Usage: /challenges randomitembattle <listitems|listpoints|blockitem>"
 usage-randomitembattle: "Usage: /%command% randomitembattle <listitems|listpoints|blockitem>"
 assigned-items-title: "=== Assigned Items ==="
 player-points-title: "=== Player Points ==="
