--- a/.github/workflows/pterodactyl.yml
+++ b/.github/workflows/pterodactyl.yml
@@ -1,29 +1,4 @@
-name: Build and Deploy via API
-
-on:
-  push:
-    branches: [ main ]
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-    
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
-    
-    - name: Build with Gradle
-      run: ./gradlew build
-
-    - name: Upload to Pterodactyl via API
+- name: Upload to Pterodactyl via API
       env:
         PTERO_URL: ${{ secrets.PTERO_URL }}
         API_KEY: ${{ secrets.PTERO_API_KEY }}
@@ -31,27 +6,28 @@ jobs:
         FILE_PATH: 'app/build/libs/FoliaChallenges.jar'
         TARGET_DIR: '/plugins'
       run: |
-        echo "1. Hole Upload-URL von Pterodactyl..."
-        UPLOAD_URL=$(curl -s "${PTERO_URL}/api/client/servers/${SERVER_ID}/files/upload?directory=${TARGET_DIR}" \
-          -H "Authorization: Bearer ${API_KEY}" \
-          -H "Content-Type: application/json" \
-          -H "Accept: application/json" | jq -r .attributes.url)
-
-        echo "Upload URL erhalten. Starte Upload..."
-        
-        curl -X POST "${UPLOAD_URL}" \
-          -F "files=@${FILE_PATH}"
-          
-        echo "Upload abgeschlossen."
-
-    - name: Restart Server
-      env:
-        PTERO_URL: ${{ secrets.PTERO_URL }}
-        API_KEY: ${{ secrets.PTERO_API_KEY }}
-        SERVER_ID: ${{ secrets.PTERO_SERVER_ID }}
-      run: |
-        curl -X POST "${PTERO_URL}/api/client/servers/${SERVER_ID}/power" \
+        RESPONSE=$(curl -s -v "${PTERO_URL}/api/client/servers/${SERVER_ID}/files/upload?directory=${TARGET_DIR}" \
           -H "Authorization: Bearer ${API_KEY}" \
           -H "Content-Type: application/json" \
           -H "Accept: application/json" \
-          -d '{"signal": "restart"}'
+          -H "User-Agent: GitHub-Actions-Deploy/1.0")
+
+        echo "--- ANTWORT VOM SERVER ---"
+        echo "$RESPONSE"
+        echo "--------------------------"
+
+        UPLOAD_URL=$(echo "$RESPONSE" | jq -r .attributes.url)
+
+        if [ "$UPLOAD_URL" == "null" ] || [ -z "$UPLOAD_URL" ]; then
+          echo "FEHLER: Konnte keine Upload-URL finden. Siehe Server-Antwort oben."
+          exit 1
+        fi
+
+        echo "Upload URL erhalten: $UPLOAD_URL"
+        echo "Starte Upload..."
+        
+        curl -X POST "${UPLOAD_URL}" \
+          -F "files=@${FILE_PATH}" \
+          -H "User-Agent: GitHub-Actions-Deploy/1.0"
+          
+        echo "Upload abgeschlossen."
