--- a/.github/workflows/pterodactyl.yml
+++ b/.github/workflows/pterodactyl.yml
@@ -1,33 +1,30 @@
-- name: Upload to Pterodactyl via API
-      env:
-        PTERO_URL: ${{ secrets.PTERO_URL }}
-        API_KEY: ${{ secrets.PTERO_API_KEY }}
-        SERVER_ID: ${{ secrets.PTERO_SERVER_ID }}
-        FILE_PATH: 'app/build/libs/FoliaChallenges.jar'
-        TARGET_DIR: '/plugins'
-      run: |
-        RESPONSE=$(curl -s -v "${PTERO_URL}/api/client/servers/${SERVER_ID}/files/upload?directory=${TARGET_DIR}" \
-          -H "Authorization: Bearer ${API_KEY}" \
-          -H "Content-Type: application/json" \
-          -H "Accept: application/json" \
-          -H "User-Agent: GitHub-Actions-Deploy/1.0")
+name: Upload to Pterodactyl
 
-        echo "--- ANTWORT VOM SERVER ---"
-        echo "$RESPONSE"
-        echo "--------------------------"
+on:
+  push:
+    branches: [ main ]
 
-        UPLOAD_URL=$(echo "$RESPONSE" | jq -r .attributes.url)
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
 
-        if [ "$UPLOAD_URL" == "null" ] || [ -z "$UPLOAD_URL" ]; then
-          echo "FEHLER: Konnte keine Upload-URL finden. Siehe Server-Antwort oben."
-          exit 1
-        fi
-
-        echo "Upload URL erhalten: $UPLOAD_URL"
-        echo "Starte Upload..."
-        
-        curl -X POST "${UPLOAD_URL}" \
-          -F "files=@${FILE_PATH}" \
-          -H "User-Agent: GitHub-Actions-Deploy/1.0"
-          
-        echo "Upload abgeschlossen."
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      - name: Build with Gradle
+        run: ./gradlew build
+      - name: Deploy To Pterodactyl
+        uses: Itzbenz/deploy-to-pterodactyl@v0.1
+        with:
+          source: 'app/build/libs/FoliaChallenges.jar'
+          target: 'plugins/FoliaChallenges.jar'
+          panel-url: ${{ secrets.PTERO_URL }}
+          server-id: ${{ secrets.PTERO_SERVER_ID }}
+          api-key: ${{ secrets.PTERO_API_KEY }}
+          restart: true
