--- a/.github/workflows/pterodactyl.yml
+++ b/.github/workflows/pterodactyl.yml
@@ -10,21 +10,52 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
+      
       - name: Make gradlew executable
         run: chmod +x ./gradlew
+      
       - name: Build with Gradle
         run: ./gradlew build
-      - name: Deploy To Pterodactyl
-        uses: Itzbenz/deploy-to-pterodactyl
-        with:
-          source: 'app/build/libs/FoliaChallenges.jar'
-          target: 'plugins/FoliaChallenges.jar'
-          panel-url: ${{ secrets.PTERO_URL }}
-          server-id: ${{ secrets.PTERO_SERVER_ID }}
-          api-key: ${{ secrets.PTERO_API_KEY }}
-          restart: true
+
+      - name: Deploy to Pterodactyl
+        env:
+          PTERO_URL: ${{ secrets.PTERO_URL }}
+          API_KEY: ${{ secrets.PTERO_API_KEY }}
+          SERVER_ID: ${{ secrets.PTERO_SERVER_ID }}
+          LOCAL_FILE: 'app/build/libs/FoliaChallenges.jar'
+          REMOTE_DIR: '/plugins' 
+        run: |
+          CLEAN_URL=${PTERO_URL%/}
+
+          if [ ! -f "$LOCAL_FILE" ]; then
+            echo "Error: File $LOCAL_FILE not found"
+            exit 1
+          fi
+
+          RESPONSE=$(curl -s "${CLEAN_URL}/api/client/servers/${SERVER_ID}/files/upload?directory=${REMOTE_DIR}" \
+            -H "Authorization: Bearer ${API_KEY}" \
+            -H "Content-Type: application/json" \
+            -H "Accept: application/json")
+
+          UPLOAD_URL=$(echo "$RESPONSE" | jq -r '.attributes.url // empty')
+
+          if [ -z "$UPLOAD_URL" ]; then
+            echo "Error getting upload URL"
+            echo "$RESPONSE"
+            exit 1
+          fi
+
+          curl -s -X POST "$UPLOAD_URL" \
+            -F "files=@$LOCAL_FILE"
+
+          curl -s -X POST "${CLEAN_URL}/api/client/servers/${SERVER_ID}/power" \
+            -H "Authorization: Bearer ${API_KEY}" \
+            -H "Content-Type: application/json" \
+            -H "Accept: application/json" \
+            -d '{"signal": "restart"}'
