--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -4,36 +4,69 @@ timer-display: "• Zeit: %time% •"
 timer-paused-title: "STOP"
 timer-paused-subtitle: "Der Timer ist pausiert!"
 timer-started: "Timer gestartet!"
-timer-started-global: "§aDer Challenge-Timer wurde gestartet!"
-item-found: "§aDu hast dein Item gefunden! Neues Item zugewiesen."
-item-blacklisted-reassigned: "§eDas Item %item% wurde geblacklistet. Du hast ein neues Item zugewiesen bekommen!"
+timer-started-global: "&aDer Challenge-Timer wurde gestartet!"
+item-found: "&aDu hast dein Item gefunden! Neues Item zugewiesen."
+item-blacklisted-reassigned: "&eDas Item %item% wurde geblacklistet. Du hast ein neues Item zugewiesen bekommen!"
 timer-stopped: "Timer gestoppt!"
 timer-resumed: "Timer fortgesetzt!"
 timer-set: "Timer auf %minutes% Minuten gesetzt!"
 invalid-minutes: "Ungültige Minutenanzahl!"
-no-permission: "Du hast keine Berechtigung dafür!"
+no-permission: "&cDu hast keine Berechtigung dafür!"
 timer-not-set-message: "Timer nicht gesetzt!"
 timer-already-running: "Timer läuft bereits!"
 timer-not-running: "Timer läuft nicht!"
-timer-expired: "Timer ist abgelaufen! Setze neue Zeit mit /challenges setcountdown <minuten>."
+timer-expired: "Timer ist abgelaufen! Setze neue Zeit mit /timer set <minuten>."
 usage-timer: "Usage: /timer <start|stop|set|resume> [minutes]"
 usage-timer-set: "Usage: /timer set <minutes>"
 usage-challenges: "Usage: /challenges randomitembattle <listitems|listpoints|blockitem>"
 usage-challenges-set: "Usage: /challenges randomitembattle <listitems|listpoints|blockitem>"
 usage-randomitembattle: "Usage: /%command% randomitembattle <listitems|listpoints|blockitem>"
+usage-blockitem: "&cUsage: /challenges randomitembattle blockitem <item>"
 assigned-items-title: "=== Assigned Items ==="
 player-points-title: "=== Player Points ==="
 no-items-assigned: "Keine Items zugewiesen."
 no-points-earned: "Keine Punkte erzielt."
-leaderboard-title: "=== Challenge Ergebnisse ==="
-leaderboard-entry: "#%rank% %player% - %points% Punkte"
-list-item-entry: "%player% - %item%"
-list-points-entry: "%player% - %points% Punkte"
-points-suffix: "Punkte"
+
+# --- Leaderboard ---
+leaderboard-title: "&6&l=== Challenge Ergebnisse ==="
+leaderboard-entry: "&e#%rank% %player% - %points% Punkte"
+leaderboard-footer: "&6&l========================"
+
+# --- Listen ---
+list-items-header: "&6&l=== Assigned Items ==="
+list-items-entry: "&f%player% &7- &a%item%"
+list-points-header: "&6&l=== Player Points ==="
+list-points-entry: "&f%player% &7- &a%points% Punkte"
+list-footer: "&6&l==================="
+
+# --- Bossbar / Actionbar ---
 bossbar-item: "Aktuelles Item: %item%"
-bossbar-paused: "Timer pausiert"
+bossbar-paused: "&7Timer pausiert"
 bossbar-default: "Aktuelles Item: -"
-# Color codes
+actionbar-not-set: "&8• &7Zeit nicht gesetzt &8•"
+actionbar-display: "&8• &7Zeit: %time% &8•"
+
+# --- Reset Logic ---
+reset-warning-lines:
+  - "&8&m---------------------------------------------"
+  - "&c&lWARNUNG: &7Du bist dabei, die gesamte Challenge zu resetten."
+  - "&4&lDIES LÖSCHT DIE GANZE WELT!"
+  - ""
+  - "&7Bitte bestätige diesen Vorgang mit:"
+  - "&6/reset confirm"
+  - "&8&m---------------------------------------------"
+reset-success-sender: "&aDaten wurden zurückgesetzt."
+reset-broadcast-warning: "&4&lACHTUNG: &cDie Welt wird in 5 Sekunden gelöscht und der Server stoppt!"
+reset-kick-message: "&cWelt-Reset wird durchgeführt!\n&eDer Server startet gleich neu."
+reset-data-only: "&cChallenge-Daten (Scores & Items) wurden zurückgesetzt (Welt bleibt erhalten)!"
+
+# --- Blacklist ---
+blacklist-already: "&cBereits geblacklistet!"
+blacklist-item-changed: "&eDein Item wurde geblacklistet. Neues Item erhalten!"
+blacklist-success: "&aItem geblacklistet!"
+blacklist-error: "&cFehler: %error%"
+
+# Color codes legacy support
 color-title: "§6§l"
 color-separator: "§6§l==================="
 color-player: "§f"
