--- a/app/src/main/resources/plugin.yml
+++ b/app/src/main/resources/plugin.yml
@@ -16,3 +16,6 @@ commands:
   start:
     description: Start the timer
     usage: /<command>
+  reset:
+    description: Reset the world
+    usage: /<command> <confirm>
