Add /reset in  plugin.yml

--- a/app/src/main/resources/plugin.yml
+++ b/app/src/main/resources/plugin.yml
@@ -5,7 +5,6 @@ main: foliachallenges.FoliaChallengePlugin
 api-version: 1.21
 description: A challenge plugin for Folia servers
 folia-supported: true
-load: STARTUP
 commands:
   challenges:
     description: Manage the challenge timer
@@ -17,3 +16,6 @@ commands:
   start:
     description: Start the timer
     usage: /<command>
+  reset:
+    description: Reset the world
+    usage: /<command> <confirm>
