Translate code to English and softcode hardcoded texts in messages.yml

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -43,3 +43,26 @@ color-no-data: "§7"
 color-timer-running: "§a"
 color-timer-paused: "§c"
 color-timer-not-set: "§e"
+# New messages for hardcoded texts
+plugin-enabled: "FoliaChallenge enabled!"
+plugin-disabled: "FoliaChallenge disabled!"
+cleanup-start: "Cleaning up old world folders..."
+cleanup-skip-active: "Skipping deletion of %world% because it is currently active! It will be queued for the next restart."
+cleanup-delete-failed: "Failed to fully delete %world%. Keeping it in queue."
+cleanup-deleting-folder: "Deleting inactive world folder: %folder%"
+cleanup-delete-path-failed: "Failed to delete: %path%"
+cleanup-walk-error: "Error walking directory: %folder%"
+reset-initiated: "§aReset initiated. World will be rotated and seed renewed..."
+reset-error-properties: "§cError modifying server.properties: %error%"
+reset-warning-1: "§4§lWARNING: §cThis command deletes all challenge data"
+reset-warning-2: "§cand §lgenerates a new world§c!"
+reset-confirm-usage: "§7Use §c/reset confirm §7to proceed."
+reset-data-cleared: "§cChallenge data (Scores & Items) have been reset!"
+item-already-blacklisted: "§cAlready blacklisted!"
+item-blacklisted: "§aItem blacklisted!"
+block-item-error: "§cError: %error%"
+usage-blockitem: "Usage: /%command% randomitembattle blockitem <item>"
+save-data-error: "Could not save data.yml"
+copy-resource-error: "Could not copy resource %filename%"
+invalid-blacklist-material: "Invalid material in blacklist: %item%"
+discord-blacklist-message: "Item-blacklist: %item%"
