Replace usage messages with /challenges help hint and add help command

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -62,3 +62,4 @@ usage-blockitem: "Usage: /%command% randomitembattle blockitem <item>"
 save-data-error: "Could not save data.yml"
 copy-resource-error: "Could not copy resource %filename%"
 invalid-blacklist-material: "Invalid material in blacklist: %item%"
+help-hint: "Use /challenges help for command list"
