--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -7,6 +7,7 @@ timer-started-global: "§aDer Challenge-Timer wurde gestartet!"
 item-found: "§aDu hast dein Item gefunden! Neues Item zugewiesen."
 item-blacklisted-reassigned: "§eDas Item %item% wurde geblacklistet. Du hast ein neues Item zugewiesen bekommen!"
 timer-stopped: "Timer gestoppt!"
+timer-stopped-global: "§cDer Challenge-Timer wurde gestoppt!"
 timer-resumed: "Timer fortgesetzt!"
 timer-set: "Timer auf %minutes% Minuten gesetzt!"
 invalid-minutes: "Ungültige Minutenanzahl!"
