Remove unused usage texts and update timer usage to point to help

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -1,22 +1,18 @@
-timer-not-set: "• Zeit wurde nicht gesetzt •"
-timer-display: "• Zeit: %time% •"
-timer-paused-title: "STOP"
+timer-not-set: "§7• §cZeit wurde nicht gesetzt §7•"
+timer-display: "§7• §rZeit: %time% §7•"
+timer-paused-title: "STOP!"
 timer-paused-subtitle: "Der Timer ist pausiert!"
 timer-started-global: "§aDer Challenge-Timer wurde gestartet!"
 item-found: "§aDu hast dein Item gefunden! Neues Item zugewiesen."
 item-blacklisted-reassigned: "§eDas Item %item% wurde geblacklistet. Du hast ein neues Item zugewiesen bekommen!"
 timer-stopped-global: "§cDer Challenge-Timer wurde gestoppt!"
-timer-set: "Timer auf %minutes% Minuten gesetzt!"
-invalid-minutes: "Ungültige Minutenanzahl!"
-timer-not-set-message: "Timer nicht gesetzt!"
+timer-set: "Timer auf §6%minutes% Minuten§7 gesetzt!"
+invalid-minutes: "§4Ungültige Minutenanzahl!"
+timer-not-set-message: "§cTimer nicht gesetzt!"
 timer-already-running: "Timer läuft bereits!"
 timer-not-running: "Timer läuft nicht!"
-timer-expired: "Timer ist abgelaufen! Setze neue Zeit mit /challenges setcountdown <minuten>."
-usage-timer: "Usage: /timer <start|stop|set|resume> [minutes]"
-usage-timer-set: "Usage: /timer set <minutes>"
-usage-challenges: "Usage: /challenges randomitembattle <listitems|listpoints|blockitem>"
-usage-challenges-set: "Usage: /challenges randomitembattle <listitems|listpoints|blockitem>"
-usage-randomitembattle: "Usage: /%command% randomitembattle <listitems|listpoints|blockitem>"
+timer-expired: "§cTimer ist abgelaufen! §7Setze eine neue Zeit mit §l/timer set <minuten>§r§7."
+usage-timer: "Use /challenges help for command list"
 assigned-items-title: "=== Assigned Items ==="
 player-points-title: "=== Player Points ==="
 no-items-assigned: "Keine Items zugewiesen."
@@ -55,7 +51,6 @@ reset-data-cleared: "§cChallenge data (Scores & Items) have been reset!"
 item-already-blacklisted: "§cAlready blacklisted!"
 item-blacklisted: "§aItem blacklisted!"
 block-item-error: "§cError: %error%"
-usage-blockitem: "Usage: /%command% randomitembattle blockitem <item>"
 save-data-error: "Could not save data.yml"
 copy-resource-error: "Could not copy resource %filename%"
 invalid-blacklist-material: "Invalid material in blacklist: %item%"
