--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -12,7 +12,7 @@ timer-not-set-message: "§cTimer nicht gesetzt!"
 timer-already-running: "Timer läuft bereits!"
 timer-not-running: "Timer läuft nicht!"
 timer-expired: "§cTimer ist abgelaufen! §7Setze eine neue Zeit mit §l/timer set <minuten>§r§7."
-usage-timer: "Use /challenges help for command list"
+usage: "Use /challenges help for command list"
 assigned-items-title: "=== Assigned Items ==="
 player-points-title: "=== Player Points ==="
 no-items-assigned: "Keine Items zugewiesen."
