--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -13,10 +13,9 @@ timer-already-running: "Timer läuft bereits!"
 timer-not-running: "Timer läuft nicht!"
 timer-expired: "§cTimer ist abgelaufen! §7Setze eine neue Zeit mit §l/timer set <minuten>§r§7."
 usage: "Use /challenges help for command list"
+no-permission: "§cYou don't have permission to use this command."
 assigned-items-title: "=== Assigned Items ==="
 player-points-title: "=== Player Points ==="
-no-items-assigned: "Keine Items zugewiesen."
-no-points-earned: "Keine Punkte erzielt."
 leaderboard-title: "=== Challenge Ergebnisse ==="
 leaderboard-entry: "#%rank% %player% - %points% Punkte"
 list-item-entry: "%player% - %item%"
