Remove foliachallenge.timer permission checks from tab complete

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -12,14 +12,14 @@ timer-not-set-message: "§cTimer nicht gesetzt!"
 timer-already-running: "Timer läuft bereits!"
 timer-not-running: "Timer läuft nicht!"
 timer-expired: "§cTimer ist abgelaufen! §7Setze eine neue Zeit mit §l/timer set <minuten>§r§7."
-usage: "Use /challenges help for command list"
-no-permission: "§cYou don't have permission to use this command."
-assigned-items-title: "=== Assigned Items ==="
-player-points-title: "=== Player Points ==="
-leaderboard-title: "=== Challenge Ergebnisse ==="
+usage: "Benutze §6/challenges help §7um die Command-Liste zu sehen"
+no-permission: "§cDu hast keine berechtigung für diesen command!"
+assigned-items-title: "§6=== Zugewiesene Items ==="
+player-points-title: "§6==== Spieler Punkte ===="
+leaderboard-title: "§6=== Challenge Ergebnisse ==="
 leaderboard-entry: "#%rank% %player% - %points% Punkte"
-list-item-entry: "%player% - %item%"
-list-points-entry: "%player% - %points% Punkte"
+list-item-entry: "§e%player% - %item%"
+list-points-entry: "§e%player% - %points% Punkte"
 points-suffix: "Punkte"
 bossbar-item: "Aktuelles Item: %item%"
 bossbar-paused: "Timer pausiert"
