Add reset-kick-message to messages.yml

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -41,6 +41,7 @@ cleanup-delete-failed: "Failed to fully delete %world%. Keeping it in queue."
 cleanup-deleting-folder: "Deleting inactive world folder: %folder%"
 cleanup-delete-path-failed: "Failed to delete: %path%"
 cleanup-walk-error: "Error walking directory: %folder%"
+reset-kick-message: "§cThe server is being reset!\n§eRestart shortly..."
 reset-initiated: "§aReset initiated. World will be rotated and seed renewed..."
 reset-error-properties: "§cError modifying server.properties: %error%"
 reset-warning-1: "§4§lWARNING: §cThis command deletes all challenge data"
