--- a/.github/workflows/Modrinth.yml
+++ b/.github/workflows/Modrinth.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        fetch-depth: 0 # Required for git log to work
+        fetch-depth: 0
 
     - name: Set up JDK 21
       uses: actions/setup-java@v4
@@ -29,10 +29,8 @@ jobs:
       id: meta
       run: |
         echo "UNIX_TIME=$(date +%s)" >> $GITHUB_ENV
-        
         VERSION=$(./gradlew properties -q | grep "^version:" | awk '{print $2}')
         echo "PROJECT_VERSION=$VERSION" >> $GITHUB_ENV
-        
         echo "COMMIT_TITLE=$(git log -1 --pretty=%s)" >> $GITHUB_ENV
         
         EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
@@ -47,17 +45,14 @@ jobs:
       uses: cloudnode-pro/modrinth-publish@v2.1.7
       with:
         token: ${{ secrets.MODRINTH_TOKEN }}
-        project: 'QSSFb4tn'
+        project: 'QSSFb4tn' 
         name: ${{ env.COMMIT_TITLE }}
         version: ${{ env.PROJECT_VERSION }}.${{ env.UNIX_TIME }}
         channel: 'alpha'
         changelog: ${{ env.COMMIT_BODY }}
-        loaders: |
-          folia
-        game-versions: |
-          1.21.8
-          1.21.9
-          1.21.10
-          1.21.11
+        
+        loaders: '["folia"]'
+        
+        game-versions: '["1.21.8", "1.21.9", "1.21.10", "1.21.11"]'
         
         files: '["app/build/libs/FoliaChallenges.jar"]'
