Update item messages: change found message to 'You've found §e%item%' and add assigned message 'Item to find: §e%item%'

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -3,7 +3,8 @@ timer-display: "§7• §rTime: %time% §7•"
 timer-paused-title: "STOP!"
 timer-paused-subtitle: "The timer is paused!"
 timer-started-global: "§aThe challenge timer has started!"
-item-found: "§aYou found your item! New item assigned."
+item-found: "You've found §e%item%"
+item-assigned: "Item to find: §e%item%"
 item-blacklisted-reassigned: "§eThe item %item% was blacklisted. You have been assigned a new item!"
 timer-stopped-global: "§cThe challenge timer has stopped!"
 timer-set: "Timer set to §6%minutes% minutes§7!"
@@ -20,7 +21,7 @@ leaderboard-title: "§6=== Challenge Results ==="
 leaderboard-entry: "#%rank% %player% §r- §a%points% Points"
 list-item-entry: "§e%player% §r- §a%item%"
 list-points-entry: "§e%player% §r- §a%points% Points"
-bossbar-item: "Current Item: §e%item%"
+bossbar-item: "Item to find: §e%item%"
 bossbar-paused: "§cTimer paused"
 bossbar-default: "Current Item: -"
 plugin-enabled: "§aFoliaChallenge enabled!"
