--- a/messages.yml languages/German.yml
+++ b/messages.yml languages/German.yml
@@ -3,7 +3,8 @@ timer-display: "§7• §rZeit: %time% §7•"
 timer-paused-title: "STOP!"
 timer-paused-subtitle: "Der Timer ist pausiert!"
 timer-started-global: "§aDer Challenge-Timer wurde gestartet!"
-item-found: "§aDu hast dein Item gefunden! Neues Item zugewiesen."
+item-found: "Du hast §e%item% gefunden"
+item-assigned: "Zu findendes Item: §e%item%"
 item-blacklisted-reassigned: "§eDas Item %item% wurde geblacklistet. Du hast ein neues Item zugewiesen bekommen!"
 timer-stopped-global: "§cDer Challenge-Timer wurde gestoppt!"
 timer-set: "Timer auf §6%minutes% Minuten§7 gesetzt!"
@@ -20,7 +21,7 @@ leaderboard-title: "§6=== Challenge Ergebnisse ==="
 leaderboard-entry: "#%rank% %player% §r- §a%points% Punkte"
 list-item-entry: "§e%player% §r- §a%item%"
 list-points-entry: "§e%player% §r- §a%points% Punkte"
-bossbar-item: "Aktuelles Item: §e%item%"
+bossbar-item: "Zu findendes Item: §e%item%"
 bossbar-paused: "§cTimer pausiert"
 bossbar-default: "Aktuelles Item: -"
 plugin-enabled: "§aFoliaChallenge aktiviert!"
