--- a/.github/workflows/Modrinth.yml
+++ b/.github/workflows/Modrinth.yml
@@ -31,27 +31,30 @@ jobs:
         echo "UNIX_TIME=$(date +%s)" >> $GITHUB_ENV
         
         VERSION=$(grep "^version:" app/src/main/resources/plugin.yml | awk '{print $2}')
-        
         VERSION=$(echo "$VERSION" | tr -d "'\"")
         
         if [ -z "$VERSION" ]; then
-             echo "WARNUNG: Version nicht in plugin.yml gefunden! Setze Fallback."
              VERSION="1.0"
         fi
-        
-        echo "Gefundene Version: $VERSION"
         echo "PROJECT_VERSION=$VERSION" >> $GITHUB_ENV
         
-        # ------------------------------------
-        
-        echo "COMMIT_TITLE=$(git log -1 --pretty=%s)" >> $GITHUB_ENV
+        RAW_TITLE=$(git log -1 --pretty=%s)
+        SHORT_TITLE=$(echo "$RAW_TITLE" | cut -c 1-64)
+        echo "COMMIT_TITLE=$SHORT_TITLE" >> $GITHUB_ENV
         
         EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+        
         echo "COMMIT_BODY<<$EOF" >> $GITHUB_ENV
+        
+        echo "## $RAW_TITLE" >> $GITHUB_ENV
+        echo "" >> $GITHUB_ENV
         git log -1 --pretty=%b >> $GITHUB_ENV
         echo "" >> $GITHUB_ENV
+        
+        SHA=$(git rev-parse HEAD)
         echo "---" >> $GITHUB_ENV
-        echo "🤖 *This release was automatically created by a commit on GitHub.*" >> $GITHUB_ENV
+        echo "🤖 *This release was automatically created by a [commit](https://github.com/dinushay/FoliaChallenges/commit/$SHA) on the [GitHub Page](https://github.com/dinushay/FoliaChallenges).*" >> $GITHUB_ENV
+        
         echo "$EOF" >> $GITHUB_ENV
 
     - name: Modrinth Publish
