Add messages for empty lists in player points, assigned items, and challenge results

--- a/messages.yml languages/German.yml
+++ b/messages.yml languages/German.yml
@@ -19,8 +19,11 @@ assigned-items-title: "§6=== Zugewiesene Items ==="
 player-points-title: "§6==== Spieler Punkte ===="
 leaderboard-title: "§6=== Challenge Ergebnisse ==="
 leaderboard-entry: "#%rank% %player% §r- §a%points% Punkte"
+no-results: "§7Keine Ergebnisse anzuzeigen."
 list-item-entry: "§e%player% §r- §a%item%"
+no-assigned-items: "§7Noch keine Items zugewiesen."
 list-points-entry: "§e%player% §r- §a%points% Punkte"
+no-points: "§7Noch keine Punkte aufgezeichnet."
 bossbar-item: "Zu findendes Item: §e%item%"
 bossbar-paused: "§cTimer pausiert"
 bossbar-default: "Aktuelles Item: -"
