--- a/messages.yml languages/English.yml
+++ b/messages.yml languages/English.yml
@@ -19,8 +19,11 @@ assigned-items-title: "§6=== Assigned Items ==="
 player-points-title: "§6==== Player Points ===="
 leaderboard-title: "§6=== Challenge Results ==="
 leaderboard-entry: "#%rank% %player% §r- §a%points% Points"
+no-results: "§7No results to display."
 list-item-entry: "§e%player% §r- §a%item%"
+no-assigned-items: "§7No items assigned yet."
 list-points-entry: "§e%player% §r- §a%points% Points"
+no-points: "§7No points recorded yet."
 bossbar-item: "Item to find: §e%item%"
 bossbar-paused: "§cTimer paused"
 bossbar-default: "Current Item: -"
