Make settings GUI softcoded with configurable title, color, and item options

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -76,3 +76,14 @@ color-no-data: "§7"
 color-timer-running: "§a"
 color-timer-paused: "§c"
 color-timer-not-set: "§e"
+settings-gui-title: "Random Item Battle Settings"
+settings-gui-color: "§b§l"
+settings-joker-name: "Joker"
+settings-joker-material: "DIAMOND"
+settings-joker-lore: "Enable Joker feature"
+settings-duplicate-name: "Duplicate Targets"
+settings-duplicate-material: "GOLD_INGOT"
+settings-duplicate-lore: "Allow duplicate items in session"
+settings-joker-gives-item-name: "Joker Gives Item"
+settings-joker-gives-item-material: "EMERALD"
+settings-joker-gives-item-lore: "Using Joker gives the item"
