--- a/messages.yml languages/German.yml
+++ b/messages.yml languages/German.yml
@@ -78,3 +78,14 @@ color-no-data: "§7"
 color-timer-running: "§a"
 color-timer-paused: "§c"
 color-timer-not-set: "§e"
+settings-gui-title: "Random Item Battle Einstellungen"
+settings-gui-color: "§b§l"
+settings-joker-name: "Joker"
+settings-joker-material: "DIAMOND"
+settings-joker-lore: "Joker-Funktion aktivieren"
+settings-duplicate-name: "Doppelte Ziele"
+settings-duplicate-material: "GOLD_INGOT"
+settings-duplicate-lore: "Doppelte Items in der Session erlauben"
+settings-joker-gives-item-name: "Joker gibt Item"
+settings-joker-gives-item-material: "EMERALD"
+settings-joker-gives-item-lore: "Joker verwenden gibt das Item"
