Update GUI settings with new names and lores, hardcode materials

--- a/messages.yml languages/German.yml
+++ b/messages.yml languages/German.yml
@@ -80,12 +80,10 @@ color-timer-paused: "§c"
 color-timer-not-set: "§e"
 settings-gui-title: "Random Item Battle Einstellungen"
 settings-gui-color: "§b§l"
-settings-joker-name: "Joker"
-settings-joker-material: "DIAMOND"
-settings-joker-lore: "Joker-Funktion aktivieren"
-settings-duplicate-name: "Doppelte Ziele"
-settings-duplicate-material: "GOLD_INGOT"
-settings-duplicate-lore: "Doppelte Items in der Session erlauben"
-settings-joker-gives-item-name: "Joker gibt Item"
-settings-joker-gives-item-material: "EMERALD"
+settings-joker-name: "§6Anzahl der Joker"
+settings-joker-lore: "§7Die §6Anzahl§7 der §6Joker§7, die ein Spieler verwenden kann"
+settings-duplicate-name: "§cDoppelte Ziele"
+settings-duplicate-lore: "§7Ziele können §cmehrfach§7 in einer Session vorkommen"
+settings-joker-gives-item-name: "§bItem bei Joker geben"
+settings-joker-gives-item-lore: "§7Wenn ein Spieler einen §bJoker§7 verwendet, erhält er auch §bdas Item§7"
 settings-joker-gives-item-lore: "Joker verwenden gibt das Item"
