--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -78,12 +78,9 @@ color-timer-paused: "§c"
 color-timer-not-set: "§e"
 settings-gui-title: "Random Item Battle Settings"
 settings-gui-color: "§b§l"
-settings-joker-name: "Joker"
-settings-joker-material: "DIAMOND"
-settings-joker-lore: "Enable Joker feature"
-settings-duplicate-name: "Duplicate Targets"
-settings-duplicate-material: "GOLD_INGOT"
-settings-duplicate-lore: "Allow duplicate items in session"
-settings-joker-gives-item-name: "Joker Gives Item"
-settings-joker-gives-item-material: "EMERALD"
-settings-joker-gives-item-lore: "Using Joker gives the item"
+settings-joker-name: "§6Amount of jokers"
+settings-joker-lore: "§7The §6amount§7 of §6jokers§7 a player can use"
+settings-duplicate-name: "§cDuplicate Targets"
+settings-duplicate-lore: "§7Targets can occour §cmultiple times§7 in a session"
+settings-joker-gives-item-name: "§bGive item on joker"
+settings-joker-gives-item-lore: "§7If a player uses a §bjoker§7, they also §breceive§7 the item"
